# M1

./: .copilotignore  .gitignore  Cv.tex  TD4.py
CHPS0701ProgrammationParallèle/: Makefile_TP2  TP1.c  TP1relire.c  TP2_REPONSES.md  TP2_ex1_monte_carlo.c  TP2_ex2_mandelbrot.c  TP2_ex3_maitre_esclave.c
CHPS0703TraitementImages/: .gitignore  Doxyfile  GUIDE_TEST.md  IMPLEMENTATION_COMPLETE.md  Makefile  PROBLEME_EROSION.md  README.md  README_TESTS.md  STRUCTURE_FINALE.txt  Tp1.cpp  build.bat  test.cpp  test_erosion.cpp
CHPS0704InferenceStatistique/: README.md  TD4.py  analyse_statistique.py  create_presentation.py  generate_data.py  presentation_inference_statistique.pptx  rapport.tex  requirements.txt
CHPS0705/: .gitignore  CHANGELOG.md  IMPROVEMENTS.md  INSTALL.md  README.md  TECHNICAL_DOC.md  config.py  main.py  requirements.txt  start.bat  start.sh  test_system.py
CHPS0706ElementsFinis/: .gitignore  EXERCICE1_CALCULS.md  INSTALLATION.md  MODIFICATIONS_PDF.md  Makefile  PROJET_COMPLET.txt  QUICKSTART.md  README.md  README_SOUMISSION.txt  START_HERE.txt  VERIFICATION_SOUMISSION.txt  create_zip.py  generate_meshes.edp  generate_report.py  main.py  requirements.txt  test_argv.edp  (+4 more)
Mail/: .env  QUOTA_MANAGEMENT.md  README.md  WORKFLOW.md  ai_detector.py  analyzed_emails.json  api_checkers.py  check_folders.py  check_quota.py  config.py  email_analyzer.py  email_cache.py  email_scan_report_20251015_110544.json  email_scan_report_20251015_110740.json  kill_and_test.bat  main.py  outlook_cleaner.py  pyproject.toml  quick_test.py  requirements.txt  test_debug.bat
(+207 files in other folders)
