[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-email-cleaner"
version = "1.0.0"
description = "Advanced email threat detection and cleaning tool for Microsoft Outlook"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["outlook", "email", "security", "phishing", "malware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Email",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "pywin32>=305",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
outlook-cleaner = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/outlook-email-cleaner"
Issues = "https://github.com/yourusername/outlook-email-cleaner/issues"
